migrations and pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,27 +26,27 @@
         <nav class="navigation">
             <ul class="list-nav">
                 <li class="list-nav-item">
-                    <a class="link-nav" href="">
+                    <a class="link-nav" href="{% url 'main' %}">
                         <span class="link-wrap">Главная</span>
                     </a>
                 </li>
                 <li class="list-nav-item">
-                    <a class="link-nav" href="">
+                    <a class="link-nav" href="{% url 'demand' %}">
                         <span class="link-wrap">Востребованность</span>
                     </a>
                 </li>
                 <li class="list-nav-item">
-                    <a class="link-nav" href="">
+                    <a class="link-nav" href="{% url 'geo' %}">
                         <span class="link-wrap">География</span>
                     </a>
                 </li>
                 <li class="list-nav-item">
-                    <a class="link-nav" href="">
+                    <a class="link-nav" href="{% url 'main' %}">
                         <span class="link-wrap">Навыки</span>
                     </a>
                 </li>
                 <li class="list-nav-item">
-                    <a class="link-nav" href="">
+                    <a class="link-nav" href="{% url 'main' %}">
                         <span class="link-wrap">Последние вакансии</span>
                     </a>
                 </li>
