--- a/static/css/base.css
+++ b/static/css/base.css
@@ -30,11 +30,23 @@ a:hover{text-decoration: none;}
 ul li{list-style: none;}
 img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+table, caption, tbody, tfoot, thead, tr, th, td {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: center;
+  background: transparent;
+  border-collapse: collapse;
+  font-weight: 400;
+}
+
 
 body {
 	background-color: #141513;
 	color: #f0f1ff;
-	font-size: 14px;
+	font-size: 16px;
 	font-family: 'Ubuntu', sans-serif;
 	font-weight: 500;
 }
@@ -58,10 +70,6 @@ body {
 	padding: 10px;
 	border-radius: 8px;
 	transition: all .3s ease;
-}
-
-.logo:hover {
-	background-color: #d6d7e8;
 }
 
 .header-wrapper {
@@ -187,6 +195,7 @@ body {
 .inserted-content {
 	max-width: 900px;
 	margin: 0 auto 40px;
+	padding-bottom: 30px;
 }
 
 .content-title {
@@ -221,7 +230,13 @@ body {
 
 .inserted-text > ul > li:after {
 	content: '';
-
+	position: absolute;
+	width: 15px;
+	height: 5px;
+	border-radius: 4px;
+	background-color: #f0f1ff;
+	left: -20px;
+	top: 11px;
 }
 
 .inserted-title {
@@ -234,12 +249,45 @@ body {
 	width: calc(100% - 200px);
 	overflow: hidden;
 	border-radius: 10px;
-	margin: 0 auto 30px;
-	/*box-shadow: 0 0 20px -10px #bababa;*/
+	margin: 0 auto;
 }
 
 .inserted-image > img {
 	width: 100%;
 	height: auto;
 	object-fit: cover;
+}
+
+table, th, td {
+  border: 1px solid #f0f1ff;
+  text-align: center;
+}
+
+.thead > tr > th {
+    font-weight: bold;
+}
+
+th {
+    padding: 10px;
+}
+
+.large {
+	width: calc(100% - 200px);
+	margin: 0 auto 30px;
+}
+
+.title-small {
+	width: calc(100% - 200px);
+	margin: 0 auto 30px;
+}
+
+.wrapper-table {
+	width: calc(100% - 200px);
+	margin: 0 auto 30px;
+	display: flex;
+	justify-content: space-around;
+}
+
+.bottom {
+	margin-bottom: 30px;
 }
