--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                     </a>
                 </li>
                 <li class="list-nav-item">
-                    <a class="link-nav" href="{% url 'main' %}">
+                    <a class="link-nav" href="{% url 'skills' %}">
                         <span class="link-wrap">Навыки</span>
                     </a>
                 </li>
