--- a/templates/geography.html
+++ b/templates/geography.html
@@ -12,7 +12,7 @@
                 Статистика по городам
             </div>
             <div class="wrapper-table">
-                <div class="small">
+                <div class="">
                     <table>
                         <thead class="thead">
                             <tr>
@@ -31,7 +31,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="small">
+                <div class="">
                     <table>
                         <thead class="thead">
                             <tr>
