--- a/static/css/base.css
+++ b/static/css/base.css
@@ -291,3 +291,21 @@ th {
 .bottom {
 	margin-bottom: 30px;
 }
+
+.skill-wrapper {
+	display: flex;
+	width: calc(100% - 100px);
+	margin: 0 auto;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	gap: 10px;
+}
+
+.skill {
+	flex: 0 0 30%;
+	margin-bottom: 30px;
+}
+
+.small {
+	font-size: 18px;
+}
