--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
                     </a>
                 </li>
                 <li class="list-nav-item">
-                    <a class="link-nav" href="{% url 'main' %}">
+                    <a class="link-nav" href="{% url 'latest' %}">
                         <span class="link-wrap">Последние вакансии</span>
                     </a>
                 </li>
@@ -69,5 +69,7 @@
             </footer>
         </div>
     </main>
+    {% block scripts %}
+    {% endblock scripts %}
 </body>
 </html>
