--- a/static/css/base.css
+++ b/static/css/base.css
@@ -368,3 +368,17 @@ th {
 .field-content {
 	flex-grow: 1;
 }
+
+.loading {
+	text-align: center;
+	font-size: 20px;
+	margin-top: 100px;
+}
+
+.loading-text {
+	margin-bottom: 15px;
+}
+
+.hidden {
+	display: none;
+}
